littlelink/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: littlelink
  name: littlelink
  labels:
    app: littlelink
spec:
  selector:
    matchLabels:
      app: littlelink
  replicas: 1
  template:
    metadata:
      labels:
        app: littlelink
    spec:
      containers:
      - name: littlelink
        image: registry.durp.info/techno-tim/littlelink-server:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3000            
        ports:
        - name: http
          containerPort: 3000
